--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 		<div class="projects__grid">
 			<div class="projects__grid-item card">
 				<img src="img/card2.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
