--- a/index.html
+++ b/index.html
@@ -134,37 +134,37 @@
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card2.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card2.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 			<div class="projects__grid-item card">
 				<img src="img/card2.png" alt="image">
-				<img class="card-view-icon" src="/img/view.svg">
+				<img class="card-view-icon" src="img/view.svg">
 				<div class="card-filter"></div>
 			</div>
 		</div>
